--- a/README
+++ b/README
@@ -19,3 +19,8 @@
 4. print-pid.c
     * Try getpid(), getppid() function. 
     * This one show process ID and parent process ID.
+5. fork-exec.c
+    * This demostrate the fork with exec() family function.
+    * exec whith letter 'p' can search for the program.
+    * With letter 'v' use NULL-terminate array arg.
+    * letter 'l' use C language argv.
